# LMS

./: .env.local.example  .gitignore  README.md  main.py  pyproject.toml
docs/: backend-architecture.md  current-state.md  store-staff-skills-kpi-training-guide.md
src/lms_engine/: __init__.py  ai.py  bootstrap.py  elevenlabs.py  storage.py
src/lms_engine/api/: http.py
src/lms_engine/application/: kpi_studio.py  mvp.py  services.py
src/lms_engine/data/: kpi_training_guide.json
src/lms_engine/domain/: models.py
src/lms_engine/integrations/: local_video_assets.py  video.py
src/lms_engine/repositories/: memory.py
src/lms_engine/ui/: app.js  index.html  styles.css
tests/: test_engine.py  test_kpi_review_ui.py  test_kpi_studio.py  test_local_video_assets.py  test_main.py  test_video_config.py
