[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lms-engine"
version = "0.1.0"
description = "Role-readiness LMS backend engine for workforce learning"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Aryan Mangla" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
